--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
 <meta http-equiv="X-UA-Compatible" content="chrome=1">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <title>{{ page.title }}</title>
-<link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" type="text/css" href="{{site.url}}/css/fonts.css" media="screen">
 <link rel="stylesheet" type="text/css" href="{{site.url}}/css/stylesheet.css" media="screen">
 <link rel="stylesheet" type="text/css" href="{{site.url}}/css/pygment_trac.css" media="screen">
 <link rel="stylesheet" type="text/css" href="{{site.url}}/css/print.css" media="print">
