add semantic support

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -4,9 +4,7 @@
         {% include header.html %}
     </head>
 　　<body>
-        {% include top.html %}
-        <div class="content">
-            {{ content }}
-        </div>
+        {{ content }}
+        {% include footer.html %}
 　　</body>
 </html>
