--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,10 +3,7 @@
 <meta http-equiv="X-UA-Compatible" content="chrome=1">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <title>{{ page.title }}</title>
-<link rel="stylesheet" type="text/css" href="{{site.url}}/css/fonts.css" media="screen">
-<link rel="stylesheet" type="text/css" href="{{site.url}}/css/stylesheet.css" media="screen">
+<link rel="stylesheet" type="text/css" href="{{site.url}}/vendor/semantic/semantic.css" media="screen">
 <link rel="stylesheet" type="text/css" href="{{site.url}}/css/pygment_trac.css" media="screen">
-<link rel="stylesheet" type="text/css" href="{{site.url}}/css/print.css" media="print">
-<!--[if lt IE 9]>
-<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-<![endif]-->
+<link rel="stylesheet" type="text/css" href="{{site.url}}/css/print.css" media="screen">
+<link rel="stylesheet" type="text/css" href="{{site.url}}/css/stylesheet.css" media="screen">
