--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -2,7 +2,7 @@
     <a class="blue {% if include.m == 0 %}active {% endif %}item" href="/">
         博客
     </a>
-    <a class="red {% if include.m == 1 %}active {% endif %}item">
+    <a class="red {% if include.m == 1 %}active {% endif %}item" href="/walking.html">
         行走
     </a>
 </div>
