--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -5,4 +5,7 @@
     <a class="red {% if include.m == 1 %}active {% endif %}item" href="/walking.html">
         行走
     </a>
+    <a class="item" href="http://my.oschina.net/indestiny" target="_blank">
+        旧文
+    </a>
 </div>
