--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -876,3 +876,7 @@ footer a:hover {
 /* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
 @media only screen and (max-width: 479px) {}
 
+.plist {
+  list-style-type: none;
+}
+
