--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -1,20 +1,30 @@
 <!DOCTYPE html>
-<html>
-　　<head>
-        {% include header.html %}
-    </head>
-　　<body>
-        {% include menu.html m=0 %}
-        <div class="ui grid">
-            <div class="three wide column" style="margin-left: 5px;">
-                {% include card.html %}
-            </div>
-            <div class="twelve wide column">
-                {{ content }}
-            </div>
-            <div class="one wide column"></div>
+<html lang="zh-CN">
+        <head>
+                {% include header.html %}
+                {% include custom_header.html %}
+        </head>
+        <body>
+        {% include sidebar.html %}
+        <div class="pusher">
+                <span id="sidebar-toggler">
+                        <i class="list icon"></i>
+                </span>
+                <div class="ui grid">
+                        <div class="row">
+                                <div class="two wide column">
+                                </div>
+                                <div class="twelve wide column">
+                                        {{ content }}
+                                </div>
+                                <div class="two wide column"></div>
+                        </div>
+                        <div class="row">
+                                {% include pagination.html %}
+                        </div>
+                </div>
         </div>
-        {% include pagination.html %}
+
+        </body>
         {% include footer.html %}
-　　</body>
 </html>
