--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,6 @@
-<head>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>{{ page.title }}</title>
-    <link rel="stylesheet" type="text/css" href="{{site.url}}/vendor/semantic/semantic.css" media="screen">
-</head>
+<meta charset="utf-8" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>{{ page.title }}</title>
+<link rel="stylesheet" type="text/css" href="{{site.url}}/vendor/semantic/semantic.css" media="screen">
+
