--- a/_layouts/walk.html
+++ b/_layouts/walk.html
@@ -1,15 +1,19 @@
-<!doctype html>
-<html lang="en" class="no-js">
-    <head>
-        {% include walking_header.html %}
-        {% include header.html %}
-    </head>
-    <body>
-        {% include menu.html m=1 %}
-        <section id="cd-timeline" class="cd-container">
-            {{ content }}
-        </section>
-        {% include footer.html %}
-        <script src="{{site.url}}/vendor/vhtimeline/js/main.js"></script>
-    </body>
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+    {% include header.html %}
+    {% include walking_header.html %}
+</head>
+<body>
+    <div class="ui grid">
+        <div class="row">
+            <div class="two wide column"></div>
+            <div class="twelve wide column">
+                {{ content }}
+            </div>
+            <div class="two wide column"></div>
+        </div>
+    </div>
+</body>
+{% include footer.html %}
 </html>
