--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,5 +3,5 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>{{ page.title }}</title>
 <link rel="stylesheet" type="text/css" href="{{site.url}}/vendor/semantic/semantic.css" media="screen">
-<link rel="shortcut icon" type="image/x-icon" href="{{site.url}}/favicon.ico">
+<link rel="shortcut icon" href="http://hao0.me/favicon.ico">
 
