--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,10 @@
+<title>{{ page.title }}</title>
 <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>{{ page.title }}</title>
+<meta name="description" content="Haolin's blog">
+<meta name="keywords" content="{{page.keywords}}">
+<meta name="author" content="haolin">
 <link rel="stylesheet" type="text/css" href="{{site.url}}/vendor/semantic/semantic.css" media="screen">
 <link rel="shortcut icon" href="http://hao0.me/favicon.ico">
 
