--- a/css/home.css
+++ b/css/home.css
@@ -110,21 +110,20 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .post-detail .post-detail-content p{
-    background-color: #fdf6e3;
     border-radius: 20px;
     padding: 10px;
-    border: 5px solid #ffffff;
 }
 
-.post-detail .post-detail-content p.intro{
-    border-radius: 20px;
+.post-detail .post-detail-content p.intro, p.wrap{
+    background-color: #fdf6e3;
+    border: 5px solid #ffffff;
 }
 
 .post-detail .post-detail-content p.note{
     color: #D95C5C !important;
 }
 
-.post-detail .post-detail-content p span.highlight{
+span.highlight{
     color: #c7254e;
     background-color: #e8e8e8;
     font-size: 19px;
