--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -4,7 +4,7 @@
     </div>
     <div id="sidebar-menu" class="ui divided list">
         <a class="item" href="/">Home</a>
-        <a class="item">Categories</a>
+        <a class="item" href="/categories.html">Categories</a>
         <a class="item">Tags</a>
         <a class="item">Notes</a>
         <a class="item">About</a>
