--- a/css/home.css
+++ b/css/home.css
@@ -199,6 +199,7 @@ span.highlight{
 .category .category-post-list .category-post .category-post-date{
     float: right;
     font-size: 16px;
+    color: #807f83;
 }
 
 
