--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -8,7 +8,7 @@
         <a class="item">Tags</a>
         <a class="item">Notes</a>
         <a class="item">About</a>
-        <a class="item" href="http://my.oschina.net/indestiny/blog" target="_blank">Previous</a>
+        <a class="item" href="http://my.oschina.net/indestiny/blog" target="_blank">Old Posts</a>
     </div>
     <div class="ui horizontal icon divider green">
         <i class="angle inverted down icon"></i>
