--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -16,4 +16,7 @@
     <div class="contact">
         haolin.h0@gmail.com
     </div>
+    <div class="alipay">
+        <img class="ui image" src="{{site.url}}/images/alipay.png">
+    </div>
 </div>
