--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -17,6 +17,6 @@
         haolin.h0@gmail.com
     </div>
     <div class="alipay">
-        <img class="ui image" src="{{site.url}}/images/alipay.png">
+        <img class="ui image" src="{{site.url}}/images/alipay.png" width="100">
     </div>
 </div>
