--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -23,7 +23,7 @@
                         </div>
                 </div>
         </div>
-
+        {% include music.html %}
         </body>
         {% include footer.html %}
 </html>
