--- a/_includes/music.html
+++ b/_includes/music.html
@@ -1,4 +1,4 @@
-<audio id="music" controls="controls" loop="false">
+<audio id="music" controls="controls" loop="false" style="display:none">
       <source src="{{site.url}}/mp3/fade.mp3" type="audio/mpeg">
 </audio>
 <script type="text/javascript">
