--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -10,6 +10,7 @@
                 {% include sidebar-toggle.html %}
                 <div class="ui grid">
                         {% include banner.html %}
+                        {% include top_ad.html %}       
                         <div class="row">
                                 <div class="two wide column">
                                 </div>
@@ -18,6 +19,7 @@
                                 </div>
                                 <div class="two wide column"></div>
                         </div>
+                        {% include bottom_ad.html %}
                 </div>
         </div>
 
