--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,6 +11,7 @@
             {% include sidebar-toggle.html %}
             <div class="ui grid">
                 {% include banner.html %}
+                {% include top_ad.html %}       
                 <div class="row">
                     <div class="two wide column"></div>
                     <div class="twelve wide column">
@@ -28,6 +29,8 @@
                         </div>
                     </div>
                     <div class="two wide column"></div>
+                </div>
+                    {% include bottom_ad.html %}
                 </div>
             </div>
         </div>
