--- a/_includes/bottom_ad.html
+++ b/_includes/bottom_ad.html
@@ -1,16 +1,13 @@
 
 <div class="row">
-    <div class="two wide column"></div>
-    <div class="twelve wide column">
-    	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-			<!-- 底部广告 -->
-			<ins class="adsbygoogle"
-			     style="display:inline-block;width:336px;height:280px"
-			     data-ad-client="ca-pub-2512354990153831"
-			     data-ad-slot="7267214509"></ins>
-			<script>
-			(adsbygoogle = window.adsbygoogle || []).push({});
-		</script>
-    </div>
-    <div class="two wide column"></div>
+	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<!-- 文章底部广告 -->
+	<ins class="adsbygoogle"
+	     style="display:block"
+	     data-ad-client="ca-pub-2512354990153831"
+	     data-ad-slot="7333946500"
+	     data-ad-format="auto"></ins>
+	<script>
+	(adsbygoogle = window.adsbygoogle || []).push({});
+	</script>
 </div>
