--- a/_includes/bottom_ad.html
+++ b/_includes/bottom_ad.html
@@ -1,13 +1,17 @@
 
 <div class="row">
-	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-	<!-- 文章底部广告 -->
-	<ins class="adsbygoogle"
-	     style="display:block"
-	     data-ad-client="ca-pub-2512354990153831"
-	     data-ad-slot="7333946500"
-	     data-ad-format="auto"></ins>
-	<script>
-	(adsbygoogle = window.adsbygoogle || []).push({});
-	</script>
+	<div class="two wide column"></div>
+    <div class="twelve wide column">
+    	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+		<!-- bottom_ad -->
+		<ins class="adsbygoogle"
+		     style="display:block"
+		     data-ad-client="ca-pub-2512354990153831"
+		     data-ad-slot="7039568509"
+		     data-ad-format="auto"></ins>
+		<script> 
+		(adsbygoogle = window.adsbygoogle || []).push({});
+		</script>
+    </div>
+    <div class="two wide column"></div>
 </div>
