--- a/_includes/bottom_ad.html
+++ b/_includes/bottom_ad.html
@@ -2,15 +2,15 @@
 <div class="row">
 	<div class="two wide column"></div>
     <div class="twelve wide column">
-    	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-		<!-- bottom_ad -->
-		<ins class="adsbygoogle"
-		     style="display:block"
-		     data-ad-client="ca-pub-2512354990153831"
-		     data-ad-slot="7039568509"
-		     data-ad-format="auto"></ins>
-		<script> 
-		(adsbygoogle = window.adsbygoogle || []).push({});
+    	<script type="text/javascript">
+		    google_ad_client = "ca-pub-2512354990153831";
+		    google_ad_slot = "2969295703";
+		    google_ad_width = 728;
+		    google_ad_height = 90;
+		</script>
+		<!-- bottom_ad4 -->
+		<script type="text/javascript"
+		src="//pagead2.googlesyndication.com/pagead/show_ads.js">
 		</script>
     </div>
     <div class="two wide column"></div>
