--- a/_includes/top_ad.html
+++ b/_includes/top_ad.html
@@ -1,15 +1,15 @@
 <div class="row">
 	<div class="two wide column"></div>
     <div class="twelve wide column">
-    	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-		<!-- top_ad -->
-		<ins class="adsbygoogle"
-		     style="display:block"
-		     data-ad-client="ca-pub-2512354990153831"
-		     data-ad-slot="9993034908"
-		     data-ad-format="auto"></ins>
-		<script>
-		(adsbygoogle = window.adsbygoogle || []).push({});
+    	<script type="text/javascript">
+		    google_ad_client = "ca-pub-2512354990153831";
+		    google_ad_slot = "6201963702";
+		    google_ad_width = 728;
+		    google_ad_height = 90;
+		</script>
+		<!-- top_ad2 -->
+		<script type="text/javascript"
+		src="//pagead2.googlesyndication.com/pagead/show_ads.js">
 		</script>
     </div>
     <div class="two wide column"></div>
