--- a/css/home.css
+++ b/css/home.css
@@ -217,4 +217,21 @@ span.highlight{
     color: #807f83;
 }
 
+blockquote{
+    font-size: 18px;
+    border-top: 1px solid #e9e9e9;
+    border-right: 1px solid #e9e9e9;
+    border-bottom: 1px solid #e9e9e9;
+}
+
+figure.highlight{
+    margin : 1em 5px;
+}
+
+figure pre, figure pre code{
+    background-color: #2d2d2d;
+    border-radius: 5px;
+}
+
+
 
