--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,12 +5,11 @@
 <script src="{{site.url}}/vendor/semantic/semantic.js"></script>
 <script src="{{site.url}}/scripts/home.js"></script>
 <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-66183854-1', 'auto');
-  ga('send', 'pageview');
-
+	var _hmt = _hmt || [];
+	(function() {
+	  var hm = document.createElement("script");
+	  hm.src = "//hm.baidu.com/hm.js?f2ca87e8d38025a07c01bc840d8b540d";
+	  var s = document.getElementsByTagName("script")[0]; 
+	  s.parentNode.insertBefore(hm, s);
+	})();
 </script>
