--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -6,7 +6,7 @@
         <a class="item" href="/">Home</a>
         <a class="item" href="/categories.html">Categories</a>
         <a class="item">Tags</a>
-        <a class="item">Notes</a>
+        <a class="item" href="{{site.url}}/rss.xml">RSS</a> 
         <a class="item">About</a>
         <a class="item" href="http://my.oschina.net/indestiny/blog" target="_blank">Old Posts</a>
     </div>
@@ -15,8 +15,5 @@
     </div>
     <div class="contact">
         haolin.h0@gmail.com
-    </div>
-    <div class="alipay">
-        <img class="ui image" src="{{site.url}}/images/wechat.png" width="100">
     </div>
 </div>
