--- a/css/home.css
+++ b/css/home.css
@@ -221,6 +221,7 @@ blockquote{
     border-top: 1px solid #e9e9e9;
     border-right: 1px solid #e9e9e9;
     border-bottom: 1px solid #e9e9e9;
+    background: #fdf6e3;
 }
 
 figure.highlight{
