--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -6,7 +6,7 @@
         <a class="item" href="/">Home</a>
         <a class="item" href="/categories.html">Categories</a>
         <a class="item">Tags</a>
-        <a class="item" href="{{site.url}}/feed.xml">RSS</a> 
+        <a class="item" href="{{site.url}}/feed.xml" type="application/rss+xml" rel="alternate">RSS</a> 
         <a class="item">About</a>
         <a class="item" href="http://my.oschina.net/indestiny/blog" target="_blank">Old Posts</a>
     </div>
