--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -29,8 +29,14 @@
                         </div>
                     </div>
                     <div class="two wide column"></div>
+                </div> 
+                <div class="row">
+                    <div class="two wide column"></div>
+                    <div class="twelve wide column" style="padding-left: 3%;">
+                        {% include comment.html %}
+                    </div>
+                    <div class="two wide column"></div>
                 </div>
-                    {% include bottom_ad.html %}
                 </div>
             </div>
         </div>
