--- a/css/home.css
+++ b/css/home.css
@@ -150,6 +150,10 @@ h1, h2, h3, h4, h5, h6 {
     color: #D95C5C !important;
 }
 
+#post-detail-comments{
+    margin-left: 3%;
+}
+
 span.highlight{
     color: #c7254e;
     background: transparent;
