--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -3,17 +3,10 @@
         <img class="circular ui image" src="{{site.url}}/images/fighting.jpg">
     </div>
     <div id="sidebar-menu" class="ui divided list">
-        <a class="item" href="/">Home</a>
-        <a class="item" href="/categories.html">Categories</a>
-        <a class="item">Tags</a>
-        <a class="item" href="{{site.url}}/feed.xml" type="application/rss+xml" rel="alternate">RSS</a> 
-        <a class="item">About</a>
-        <a class="item" href="http://my.oschina.net/indestiny/blog" target="_blank">Old Posts</a>
-    </div>
-    <div class="ui horizontal icon divider green">
-        <i class="angle inverted down icon"></i>
-    </div>
-    <div class="contact">
-        haolin.h0@gmail.com
+        <a class="item" href="/" title="Home"><i class="inverted circular teal large home icon"></i></a>
+        <a class="item" href="/categories.html" title="Categories"><i class="inverted circular teal large tasks icon"></i></a>
+        <a class="item" href="{{site.url}}/feed.xml" type="application/rss+xml" rel="alternate" title="Feed" target="_blank"><i class="inverted circular teal large feed icon"></i></a> 
+        <a class="item" href="http://my.oschina.net/indestiny/blog" target="_blank" title="Old Posts"><i class="inverted circular teal large inbox icon"></i></a>
+        <a class="item" href="mailto:haolin.h0@gmail.com" target="_blank"><i class="inverted circular teal large mail icon"></i></a>
     </div>
 </div>
