--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,5 +6,5 @@
 <meta name="keywords" content="{{page.keywords}}">
 <meta name="author" content="haolin">
 <link rel="stylesheet" type="text/css" href="{{site.url}}/vendor/semantic/semantic.css" media="screen">
-<link rel="shortcut icon" href="http://hao0.me/favicon.ico">
+<link rel="shortcut icon" href="http://t.hao0.me/favicon.ico">
 
