--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -9,8 +9,7 @@
         <div class="pusher">
                 {% include sidebar-toggle.html %}
                 <div class="ui grid">       
-                        {% include banner.html %}
-                        {% include top_ad.html %}       
+                        {% include banner.html %} 
                         <div class="row">
                                 <div class="two wide column">
                                 </div>
@@ -20,9 +19,7 @@
                                 <div class="two wide column">   
                                 </div>
                         </div>
-                        <div class="row">
-                                
-                        </div>
+                        {% include bottom_ad.html %} 
                 </div>
         </div>
         </body>
