--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,5 +6,6 @@
 <meta name="keywords" content="{{page.keywords}}">
 <meta name="author" content="haolin">
 <link rel="stylesheet" type="text/css" href="{{site.url}}/vendor/semantic/semantic.css" media="screen">
+<link href="//cdn.muicss.com/mui-0.6.0/css/mui.min.css" rel="stylesheet" type="text/css" />
 <link rel="shortcut icon" href="http://t.hao0.me/favicon.ico">
 
