--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,6 +3,7 @@
 <![endif]-->
 <script src="{{site.url}}/vendor/jquery.js"></script>
 <script src="{{site.url}}/vendor/semantic/semantic.js"></script>
+<script src="//cdn.muicss.com/mui-0.6.0/js/mui.min.js"></script>
 <script src="{{site.url}}/scripts/home.js"></script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
