--- a/css/home.css
+++ b/css/home.css
@@ -226,6 +226,9 @@ blockquote{
     border-right: 1px solid #e9e9e9;
     border-bottom: 1px solid #e9e9e9;
     background: #fdf6e3;
+    margin-left: 0px;
+    margin-right: 0px;
+    padding: 10px 0 10px 10px;
 }
 
 figure.highlight{
