--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -30,6 +30,13 @@
                     <div class="two wide column"></div>
                 </div> 
                 <div class="row">
+                    <div class="five wide column"></div>
+                    <div class="six wide column">
+                        {% include donate.html %}
+                    </div>
+                    <div class="five wide column"></div>
+                </div>
+                <div class="row">
                     <div class="two wide column"></div>
                     <div class="twelve wide column" style="padding-left: 3%;">
                         {% include comment.html %}
