--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -8,5 +8,6 @@
         <a class="item" href="{{site.url}}/feed.xml" type="application/rss+xml" rel="alternate" title="Feed" target="_blank"><i class="inverted circular teal large feed icon"></i></a> 
         <a class="item" href="http://my.oschina.net/indestiny/blog" target="_blank" title="Old Posts"><i class="inverted circular teal large inbox icon"></i></a>
         <a class="item" href="mailto:haolin.h0@gmail.com" target="_blank"><i class="inverted circular teal large mail icon"></i></a>
+        <a class="item" href="https://github.com/ihaolin" target="_blank"><i class="inverted circular teal large github icon"></i></a>
     </div>
 </div>
