--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,4 +7,5 @@
 <meta name="author" content="haolin">
 <link rel="stylesheet" type="text/css" href="{{site.url}}/vendor/semantic/semantic.css" media="screen">
 <link rel="shortcut icon" href="http://t.hao0.me/favicon.ico">
+<link rel="canonical" href="http://t.hao0.me">
 
