--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,6 +6,6 @@
 <meta name="keywords" content="{{page.keywords}}">
 <meta name="author" content="haolin">
 <link rel="stylesheet" type="text/css" href="{{site.url}}/vendor/semantic/semantic.css" media="screen">
-<link rel="shortcut icon" href="http://t.hao0.me/favicon.ico">
-<link rel="canonical" href="http://t.hao0.me">
+<link rel="shortcut icon" href="https://t.hao0.me/favicon.ico">
+<link rel="canonical" href="https://t.hao0.me">
 
