mysql innodb arch & ui

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,6 +1,6 @@
-<div class="row">
+<div class="row banner" style="padding-top: 0;">
     <div class="sixteen wide column">
-        <div class="banner">
+        <div>
             <img src="{{site.url}}/images/banner.jpg">
         </div>
     </div>
