--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -5,9 +5,8 @@
                 {% include custom_header.html %}
         </head>
         <body>
-        {% include sidebar.html %}
-        <div class="pusher">
-                {% include sidebar-toggle.html %}
+        <div>
+                {% include topnav.html %}   
                 <div class="ui grid">
                         {% include banner.html %}
                         {% include top_ad.html %}       
