--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,10 +6,9 @@
         {% include custom_header.html %}
     </head>
     <body>
-        {% include sidebar.html %}
-        <div class="pusher">
-            {% include sidebar-toggle.html %}
+        <div>
             <div class="ui grid">
+                {% include topnav.html %}   
                 {% include banner.html %} 
                 <div class="row">
                     <div class="two wide column"></div>
