--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -5,10 +5,9 @@
                 {% include custom_header.html %}
         </head>
         <body>
-        {% include sidebar.html %}
-        <div class="pusher">
-                {% include sidebar-toggle.html %}
-                <div class="ui grid">       
+        <div>    
+                <div class="ui grid">  
+                        {% include topnav.html %}   
                         {% include banner.html %} 
                         <div class="row">
                                 <div class="two wide column">
