--- a/css/home.css
+++ b/css/home.css
@@ -58,13 +58,18 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 16px;
 }
 
-.banner{
-    top: 0px;
+.topnav{
+    padding-bottom: 0;
+}
+
+div.banner{
+    padding-top: 0;
 }
 
 .banner img{
     width: 100%;
 }
+
 
 .post{
     padding-bottom: 20px;
