innodb lock & transaction model

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="Haolin's blog">
+<meta name="description" content="{{page.keywords}}">
 <meta name="keywords" content="{{page.keywords}}">
 <meta name="author" content="haolin">
 <link rel="stylesheet" type="text/css" href="{{site.url}}/vendor/semantic/semantic.css" media="screen">
