--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,7 +1,7 @@
 <div class="row banner" style="padding-top: 0;">
     <div class="sixteen wide column">
         <div>
-            <img src="{{site.url}}/images/banner.jpg">
+            <img src="/images/banner.jpg">
         </div>
     </div>
 </div>
