--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
 <meta name="description" content="{{page.keywords}}">
 <meta name="keywords" content="{{page.keywords}}">
 <meta name="author" content="haolin">
-<link rel="stylesheet" type="text/css" href="{{site.url}}/vendor/semantic/semantic.css" media="screen">
-<link rel="shortcut icon" href="https://t.hao0.me/favicon.ico">
+<link rel="stylesheet" type="text/css" href="/vendor/semantic/semantic.css" media="screen">
+<link rel="shortcut icon" href="/favicon.ico">
 <link rel="canonical" href="https://t.hao0.me">
 
