--- a/_includes/walk.html
+++ b/_includes/walk.html
@@ -4,7 +4,7 @@
     </div>
     <div class="cd-timeline-content">
         {% if include.walk.type == 'picture' %}
-            <img class="poptip" src="{{site.url}}/album/{{include.walk.path}}" title="{{include.walk.desc}}" data-variation="inverted">
+            <img class="poptip" src="/album/{{include.walk.path}}" title="{{include.walk.desc}}" data-variation="inverted">
         {% endif %}
 
         {% if include.walk.type == 'movie' %}
