--- a/_includes/custom_header.html
+++ b/_includes/custom_header.html
@@ -1,1 +1,1 @@
-<link rel="stylesheet" type="text/css" href="{{site.url}}/css/home.css" media="screen">
+<link rel="stylesheet" type="text/css" href="/css/home.css" media="screen">
