--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,9 @@
 <!--[if lt IE 9]>
 <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
-<script src="{{site.url}}/vendor/jquery.js"></script>
-<script src="{{site.url}}/vendor/semantic/semantic.js"></script>
-<script src="{{site.url}}/scripts/home.js"></script>
+<script src="/vendor/jquery.js"></script>
+<script src="/vendor/semantic/semantic.js"></script>
+<script src="/scripts/home.js"></script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
