--- a/_includes/post_header.html
+++ b/_includes/post_header.html
@@ -1,2 +1,2 @@
-<link rel="stylesheet" type="text/css" href="{{site.url}}/css/pygment_trac.css" media="screen">
-<link rel="stylesheet" type="text/css" href="{{site.url}}/css/stylesheet.css" media="screen">
+<link rel="stylesheet" type="text/css" href="/css/pygment_trac.css" media="screen">
+<link rel="stylesheet" type="text/css" href="/css/stylesheet.css" media="screen">
