--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -5,7 +5,7 @@
     <div id="sidebar-menu" class="ui divided list">
         <a class="item" href="/" title="Home"><i class="inverted circular teal large home icon"></i></a>
         <a class="item" href="/categories.html" title="Categories"><i class="inverted circular teal large tasks icon"></i></a>
-        <a class="item" href="{{site.url}}/feed.xml" type="application/rss+xml" rel="alternate" title="Feed" target="_blank"><i class="inverted circular teal large feed icon"></i></a> 
+        <a class="item" href="/feed.xml" type="application/rss+xml" rel="alternate" title="Feed" target="_blank"><i class="inverted circular teal large feed icon"></i></a> 
         <a class="item" href="http://my.oschina.net/indestiny/blog" target="_blank" title="Old Posts"><i class="inverted circular teal large inbox icon"></i></a>
         <a class="item" href="mailto:haolin.h0@gmail.com" target="_blank"><i class="inverted circular teal large mail icon"></i></a>
         <a class="item" href="https://github.com/ihaolin" target="_blank"><i class="inverted circular teal large github icon"></i></a>
