--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <!--[if lt IE 9]>
 <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
-<script src="/vendor/jquery.js"></script>
+<script src="/scripts/jquery.js"></script>
 <script src="/vendor/semantic/semantic.js"></script>
 <script src="/scripts/home.js"></script>
 <script>
