--- a/_includes/music.html
+++ b/_includes/music.html
@@ -1,5 +1,5 @@
 <audio id="music" controls="controls" loop="false" style="display:none">
-      <source src="{{site.url}}/mp3/fade.mp3" type="audio/mpeg">
+      <source src="/mp3/fade.mp3" type="audio/mpeg">
 </audio>
 <script type="text/javascript">
 	var m = document.getElementById('music');
