--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,6 +1,6 @@
 <div class="ui floating sidebar">
     <div class="portrait">
-        <img class="circular ui image" src="{{site.url}}/images/fighting.jpg">
+        <img class="circular ui image" src="/images/fighting.jpg">
     </div>
     <div id="sidebar-menu" class="ui divided list">
         <a class="item" href="/" title="Home"><i class="inverted circular teal large home icon"></i></a>
