--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -8,7 +8,7 @@
 	        <a class="item" href="/categories.html" title="Categories">
 	        	<i class="inverted teal big tasks icon"></i>Categories
 	        </a>
-	        <a class="item" href="{{site.url}}/feed.xml" type="application/rss+xml" rel="alternate" 
+	        <a class="item" href="/feed.xml" type="application/rss+xml" rel="alternate" 
 	        	title="Feed" target="_blank">
 	        	<i class="inverted teal big feed icon"></i>Feed
         	</a> 
