--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
 <script src="/scripts/jquery.js"></script>
-<script src="/vendor/semantic/semantic.js"></script>
+<script src="/scripts/semantic.js"></script>
 <script src="/scripts/home.js"></script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
