--- a/_includes/donate.html
+++ b/_includes/donate.html
@@ -1,6 +1,6 @@
 <div align="center">
-	<img src="{{site.url}}/images/alipay.png" width="200">
-	<img src="{{site.url}}/images/wechat.png" width="200">	
+	<img src="/images/alipay.png" width="200">
+	<img src="/images/wechat.png" width="200">	
 </div>
 <div align="center">
 	好人，一生平安。
