--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -3,22 +3,24 @@
   		<a class="item"></a>
   		<div class="right menu">
   			<a class="item" href="/" title="Home">
-	        	<i class="inverted teal big home icon"></i>Home
+	        	<i class="inverted teal big home icon"></i>
 	        </a>
 	        <a class="item" href="/categories.html" title="Categories">
-	        	<i class="inverted teal big tasks icon"></i>Categories
+	        	<i class="inverted teal big tasks icon"></i>
 	        </a>
 	        <a class="item" href="/feed.xml" type="application/rss+xml" rel="alternate" 
 	        	title="Feed" target="_blank">
-	        	<i class="inverted teal big feed icon"></i>Feed
+	        	<i class="inverted teal big feed icon"></i>
         	</a> 
 	        <a class="item" href="mailto:haolin.h0@gmail.com" target="_blank">
-	        	<i class="inverted teal big mail icon"></i>Email
+	        	<i class="inverted teal big mail icon"></i>
 	        </a>
 	        <a class="item" href="https://github.com/ihaolin" target="_blank">
-	        	<i class="inverted teal big github icon"></i>Github
+	        	<i class="inverted teal big github icon"></i>
 	        </a>
-	        <a class="item"></a>
+	        <a class="item" href="https://www.youtube.com/channel/UCxVy1t6F_cQdu9CAn_A5b0w/featured" target="_blank">
+	        	<i class="inverted teal big youtube icon"></i>
+	        </a>
   		</div>
   	</div>
 </div>   
