--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -19,7 +19,14 @@
                                 </div>
                         </div>
                 </div>
+                <div class="footer">
+                    <div class="footer-beian" style="text-align: center;">
+                      <a href="https://beian.miit.gov.cn/" target="_blank">蜀ICP备15031837号</a>
+                    </div>
+                </div>
         </div>
         </body>
         {% include footer.html %}
+
+
 </html>
