--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,10 @@
+
+<div class="row">
+    <div class="footer-beian" style="text-align: center;">
+      <a href="https://beian.miit.gov.cn/" target="_blank">蜀ICP备15031837号</a>
+    </div>
+</div>
+
 <!--[if lt IE 9]>
 <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
