--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 
 <div class="row">
-    <div class="footer-beian" style="text-align: center;">
+    <div class="footer-beian" style="padding-left: 45%;">
       <a href="https://beian.miit.gov.cn/" target="_blank">蜀ICP备15031837号</a>
     </div>
 </div>
